--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "type": "git",
     "url": "git+https://github.com/colkassad/terrain-rgb-converter.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["terrain-rgb"],
+  "author": "Shane Brennan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/colkassad/terrain-rgb-converter/issues"
