--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ typings/
 test/output256x256.png
 test/output512x512.png
 test/retrievedTile.png
+test/outputScaled512x512.png
+test/outputSlope512x512.png
