--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/colkassad/terrain-rgb-height#readme",
   "dependencies": {
-    "pngjs": "^3.4.0",
-    "request": "^2.88.0"
+    "pngjs": "^7.0.0",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^7.1.2"
+    "chai": "^5.2.0",
+    "mocha": "^11.6.0"
   }
 }
